# daml

./: WORKSPACE  package.json
bazel_tools/: scala.bzl
compiler/daml-extension/: package.json
compiler/damlc/daml-compiler/src/DA/Daml/Compiler/: DataDependencies.hs
compiler/damlc/daml-lf-conversion/src/DA/Daml/: LFConversion.hs
compiler/damlc/daml-lf-conversion/src/DA/Daml/LFConversion/: MetadataEncoding.hs
compiler/damlc/tests/src/DA/Test/: DataDependencies.hs
daml-lf/transaction-test-lib/src/main/scala/lf/transaction/test/: TransactionBuilder.scala
daml-lf/transaction-test-lib/src/main/scala/lf/value/test/: ValueGenerators.scala
data-deps/new-package/: daml.yaml
data-deps/new-package/daml/: Main.daml
data-deps/old-package/: daml.yaml
data-deps/old-package/daml/: A.daml  B.daml  T.daml
docs/: BUILD.bazel
docs/configs/html/: conf.py
docs/scripts/: live-preview.sh
docs/source/getting-started/: installation.rst
docs/sphinx_ext/: canton_embed_doc.py  helloworld.py
extractor/src/main/scala/com/digitalasset/extractor/: Extractor.scala
language-support/scala/bindings-akka/src/main/resources/: reference.conf
ledger-api/grpc-definitions/com/daml/ledger/api/v1/: completion.proto
ledger-service/http-json/: BUILD.bazel
ledger/error/: BUILD.bazel
ledger/error/src/main/scala/com/daml/error/: ErrorGroup.scala  ErrorResource.scala
ledger/error/src/main/scala/com/daml/error/definitions/: TransactionError.scala
ledger/error/src/main/scala/com/daml/error/generator/: Main.scala
ledger/ledger-api-client/src/it/scala/com/digitalasset/ledger/client/: CommandClientIT.scala
ledger/ledger-api-domain/src/main/scala/com/digitalasset/ledger/api/: domain.scala
ledger/metrics/src/main/scala/com/daml/metrics/: Metrics.scala
ledger/participant-integration-api/src/main/scala/db/migration/postgres/: V2_1__Rebuild_Acs.scala  V3__Recompute_Key_Hash.scala
ledger/participant-integration-api/src/main/scala/platform/apiserver/: ApiServices.scala  StandaloneApiServer.scala
ledger/participant-integration-api/src/main/scala/platform/apiserver/error/: LedgerApiErrors.scala  TransactionError.scala
ledger/participant-integration-api/src/main/scala/platform/apiserver/execution/: StoreBackedCommandExecutor.scala
ledger/participant-integration-api/src/main/scala/platform/apiserver/services/: ApiCommandService.scala  ApiSubmissionService.scala
ledger/participant-integration-api/src/main/scala/platform/apiserver/services/transaction/: ApiTransactionService.scala
ledger/participant-integration-api/src/main/scala/platform/configuration/: IndexConfiguration.scala
ledger/participant-integration-api/src/main/scala/platform/index/: BuffersUpdater.scala
ledger/participant-integration-api/src/main/scala/platform/indexer/: IndexerConfig.scala  JdbcIndexer.scala
ledger/participant-integration-api/src/main/scala/platform/store/: ActiveLedgerStateManager.scala
ledger/participant-integration-api/src/main/scala/platform/store/appendonlydao/: JdbcLedgerDao.scala
ledger/participant-integration-api/src/main/scala/platform/store/appendonlydao/events/: ContractStateEventsReader.scala  EventsRange.scala  LfValueTranslation.scala  (+3 more)
ledger/participant-integration-api/src/main/scala/platform/store/backend/: OracleQueryTestingApp.scala  OracleQueryTestingApp2.scala
ledger/participant-integration-api/src/main/scala/platform/store/dao/: JdbcLedgerDao.scala
ledger/participant-integration-api/src/main/scala/platform/store/entries/: LedgerEntry.scala
ledger/sandbox-classic/src/main/scala/platform/sandbox/: SandboxServer.scala
navigator/frontend/: package.json
release/: RELEASE.md
(+62 files in other folders)
