# Copyright (c) 2021 Digital Asset (Switzerland) GmbH and/or its affiliates. All rights reserved.
# SPDX-License-Identifier: Apache-2.0

load(
    "//bazel_tools:scala.bzl",
    "da_scala_binary",
    "da_scala_library",
    "da_scala_test_suite",
)


da_scala_binary(
    name = "gen-docs",
    srcs = [],
#    srcs = glob(["src/main/scala/**/*.scala"]),
#        [
#        "server.scala",
#    ],
    main_class = "com.daml.error.generator.Main",
    deps = [
        "//ledger/error",
        "//ledger/participant-integration-api",
    ],
    visibility = ["//visibility:public"],
    scala_deps = [
#        "@maven//:com_github_scopt_scopt",
#                "@maven//:io_circe_circe_core",
#                "@maven//:io_circe_circe_generic",
#                "@maven//:io_circe_circe_parser",
    ],
)

#da_scala_binary(
#    name = "app",
#    main_class = "com.daml.ledger.on.memory.Main",
#    visibility = ["//visibility:public"],
#    runtime_deps = [
#        "@maven//:ch_qos_logback_logback_classic",
#        "@maven//:ch_qos_logback_logback_core",
#        "@maven//:com_h2database_h2",
#    ],
#    deps = [
#        ":ledger-on-memory-app",
#    ],
#)


da_scala_library(
    name = "error",
    srcs = glob(["src/main/scala/**/*.scala"]),
    tags = ["maven_coordinates=com.daml:error:__VERSION__"],
    versioned_scala_deps = {
        "2.12": ["@maven//:org_scala_lang_modules_scala_collection_compat"],
    },
    visibility = ["//visibility:public"],
    deps = [
        "//libs-scala/contextualized-logging",
        "//libs-scala/logging-entries",
        "@maven//:com_google_api_grpc_proto_google_common_protos",
        "@maven//:com_google_protobuf_protobuf_java",
        "@maven//:io_grpc_grpc_api",
        "@maven//:io_grpc_grpc_protobuf",
        "@maven//:org_reflections_reflections",
        "@maven//:org_slf4j_slf4j_api",
    ],
    scala_deps = [
        "@maven//:org_typelevel_cats_core",
                "@maven//:io_spray_spray_json",
                        "@maven//:io_circe_circe_core",
#                        "@maven//:io_circe_circe_generic",
#                        "@maven//:io_circe_circe_parser",
    ]
)

da_scala_library(
    name = "error-test-utils",
    srcs = glob(["src/test/utils/**/*.scala"]),
    scala_deps = [],
    tags = ["maven_coordinates=com.daml:error-test-package:__VERSION__"],
    visibility = ["//visibility:private"],
    deps = [
        ":error",
        "//libs-scala/contextualized-logging",
        "@maven//:io_grpc_grpc_api",
    ],
)

da_scala_test_suite(
    name = "error-test-suite",
    srcs = glob(["src/test/suite/scala/**/*.scala"]),
    resources = ["src/test/resources/logback-test.xml"],
    scala_deps = [
        "@maven//:org_scalactic_scalactic",
        "@maven//:org_scalatest_scalatest_core",
        "@maven//:org_scalatest_scalatest_matchers_core",
        "@maven//:org_scalatest_scalatest_shouldmatchers",
    ],
    versioned_scala_deps = {
        "2.12": ["@maven//:org_scala_lang_modules_scala_collection_compat"],
    },
    deps = [
        ":error",
        ":error-test-utils",
        "//ledger/test-common",
        "//libs-scala/contextualized-logging",
        "@maven//:ch_qos_logback_logback_classic",
        "@maven//:com_google_api_grpc_proto_google_common_protos",
        "@maven//:com_google_protobuf_protobuf_java",
        "@maven//:io_grpc_grpc_api",
        "@maven//:io_grpc_grpc_protobuf",
        "@maven//:org_scalatest_scalatest_compatible",
        "@maven//:org_slf4j_slf4j_api",
    ],
)
